--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
+    <title>Burger flame <title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="index.html"><h1>Burger flame </h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
@@ -64,9 +64,9 @@
   </header>
 
   <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:410-602-5008">
+    <a class="btn" href="tel:1234567890">
     <span class="glyphicon glyphicon-earphone"></span>
-    410-602-5008
+1234567890
     </a>
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
@@ -78,16 +78,15 @@
       <div class="row">
         <section id="hours" class="col-sm-4">
           <span>Hours:</span><br>
-          Sun-Thurs: 11:15am - 10:00pm<br>
-          Fri: 11:15am - 2:30pm<br>
-          Saturday Closed
+          MON-FRI: 11:15am - 11:00pm<br>
+          Satur - sunday : 11:15am - 12:00am<br>
           <hr class="visible-xs">
         </section>
         <section id="address" class="col-sm-4">
           <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          Burguer flame <br>
+          shop no 4 , GTB NAGAR, Khara
+          <p>* Delivery area within 3-4 miles.</p>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
@@ -95,14 +94,14 @@
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
+      <div class="text-center">&copy; Copyright </div>Burger flame , nov 2020
     </div>
   </footer>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/ajax-utils.js"></script>
+  <script src="js/ajax-utils.js"></script>n 
   <script src="js/script.js"></script>
 </body>
 </html>
